--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "vitest",
     "test:unit": "vitest run --coverage",
+    "test:ci": "node ../ci-test-runner.js",
     "test:unit:watch": "vitest",
     "test:integration": "vitest run test/**/*.integration.test.ts",
     "test:coverage": "vitest run --coverage",
