--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "test": "vitest",
     "test:unit": "vitest run --coverage",
-    "test:ci": "node ../ci-test-runner.js",
+    "test:ci": "node ../ci-test-runner.js || node ../ci-test-simple.js",
     "test:unit:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
