Fix GitHub Actions npm cache dependency paths
- Changed cache-dependency-path from package-lock.json to package.json (files don't exist)
- Changed npm ci to npm install since no lock files are present
- This should resolve 'Some specified paths were not resolved, unable to cache dependencies' error
- Updated all three jobs: server unit tests, client unit tests, performance tests

Environment details show Node.js v20.19.4 and npm 10.8.2 are working correctly.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,11 +39,11 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: server/package-lock.json
+          cache-dependency-path: server/package.json
 
       - name: 📥 Install Server Dependencies
         working-directory: ./server
-        run: npm ci
+        run: npm install
 
       - name: 🔍 Lint Server Code (if config exists)
         working-directory: ./server
@@ -81,11 +81,11 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: client/package.json
 
       - name: 📥 Install Client Dependencies
         working-directory: ./client
-        run: npm ci
+        run: npm install
 
       - name: 🔍 Lint Client Code
         working-directory: ./client
@@ -124,11 +124,11 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: client/package.json
 
       - name: 📥 Install Dependencies
         working-directory: ./client
-        run: npm ci
+        run: npm install
 
       - name: 🏗️ Build for Performance Testing
         working-directory: ./client
