Configure GitHub Pages to connect to Render backend
- Updated render.yaml to allow GitHub Pages origin (AloneGhost12.github.io)
- Added production API URL to GitHub Actions deployment
- Frontend will connect to: https://safe-vault-qn1g.onrender.com
- CORS configured for secure cross-origin requests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build
         working-directory: ./client
         run: npm run build
+        env:
+          VITE_API_URL: https://safe-vault-qn1g.onrender.com
+          VITE_APP_NAME: Safee - Personal Vault
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
