Fix Render TypeScript build issues
- Updated tsconfig.json with more robust TypeScript settings
- Added skipLibCheck and proper module resolution
- Created custom build script (build.sh) for Render deployment
- Updated render.yaml to use new build process that handles type definitions
- Changed npm ci to npm install to include dev dependencies for TypeScript compilation

This should resolve the TS2688 errors for missing type definition files.

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: vault-api
     runtime: node
     plan: starter
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build:render
     startCommand: npm start
     envVars:
       - key: NODE_ENV
