--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc -p .",
-    "build:production": "npm ci --only=production && npm run build",
+    "build": "tsc --skipLibCheck --noEmit false",
+    "build:render": "chmod +x build.sh && ./build.sh",
+    "build:clean": "rm -rf dist && npm run build",
+    "build:production": "npm ci --omit=dev && npm run build:clean",
     "start": "node dist/index.js",
     "start:production": "NODE_ENV=production node dist/index.js",
     "docker:build": "docker build -t vault-server .",
