--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,18 +6,25 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types"],
+    "types": []
   },
   "include": [
     "src/**/*"
   ],
   "exclude": [
     "test/**/*",
-    "dist/**/*",
+    "dist/**/*", 
     "node_modules/**/*",
     "**/*.test.ts",
     "**/*.test.js",
     "vitest.config.ts",
-    "vitest.config.js"
+    "vitest.config.js",
+    "coverage/**/*"
   ]
 }
