Fix TypeScript build errors for Render deployment
- Move TypeScript and @types packages to dependencies (needed for build)
- Fix CORS middleware type annotations
- Update render.yaml to use server directory as rootDir
- Improve build script error handling

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,8 @@ services:
     name: vault-api
     runtime: node
     plan: starter
-    buildCommand: npm install && npm run build:render
+    rootDir: server
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
