--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc --skipLibCheck --noEmit false",
+    "build": "tsc --skipLibCheck true --noEmit false",
     "build:render": "chmod +x build.sh && ./build.sh",
     "build:clean": "rm -rf dist && npm run build",
     "build:production": "npm ci --omit=dev && npm run build:clean",
@@ -32,7 +32,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.883.0",
     "@aws-sdk/s3-request-presigner": "^3.883.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/node": "^20.19.13",
     "@types/ws": "^8.18.1",
     "argon2": "^0.30.0",
     "cloudinary": "^2.7.0",
@@ -49,21 +54,16 @@
     "otplib": "^12.0.1",
     "pino": "^8.0.0",
     "pino-http": "^10.5.0",
+    "typescript": "^5.0.0",
     "uuid": "^12.0.0",
     "ws": "^8.18.3",
     "zod": "^3.20.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.13",
     "@types/supertest": "^2.0.12",
     "eslint": "^8.0.0",
     "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
     "vitest": "^1.0.0"
   }
 }
