--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     runtime: node
     plan: starter
     rootDir: server
-    buildCommand: npm install && npm run build
+    buildCommand: npm install --production=false && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
