--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,8 @@ services:
     name: vault-api
     runtime: node
     plan: starter
-    rootDir: server
-    buildCommand: npm install --production=false && npm run build:render
-    startCommand: npm start
+    buildCommand: cd server && npm install --production=false && npm run build
+    startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
         value: production
