--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "npm install",
     "dev:client": "npm --workspace client run dev",
     "dev:server": "npm --workspace server run dev",
-    "build": "npm --workspace client run build && npm --workspace server run build",
-    "start": "npm --workspace server run start"
+    "build": "npm --workspace server run build",
+    "build:full": "npm --workspace client run build && npm --workspace server run build",
+    "start": "npm --workspace server run start",
+    "postinstall": "npm --workspace server install"
   }
 }
