URGENT: Remove recursive postinstall scripts
- Remove postinstall from root package.json (caused infinite loop)
- Remove postinstall from server package.json (triggered builds during install)
- Keep prestart in server to build before starting
- Simple workspace build should work now without recursion

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev:server": "npm --workspace server run dev",
     "build": "npm --workspace server run build",
     "build:full": "npm --workspace client run build && npm --workspace server run build",
-    "start": "npm --workspace server run start",
-    "postinstall": "npm --workspace server install"
+    "start": "npm --workspace server run start"
   }
 }
