Make server startup more resilient for deployment
- Allow server to start even if MONGO_URI is missing (warn instead of exit)
- Gracefully handle database connection failures
- Add clean build step to clear dist cache and ensure slowDown fix is compiled
- Server will now start and bind to port even if database isn't ready yet

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc --skipLibCheck true --noEmit false --noImplicitAny false",
+    "build": "rm -rf dist && tsc --skipLibCheck true --noEmit false --noImplicitAny false",
     "build:render": "chmod +x build.sh && ./build.sh",
     "build:clean": "rm -rf dist && npm run build",
     "build:production": "npm ci --omit=dev && npm run build:clean",
