Fix API URL in GitHub Pages deployment workflow
- Update VITE_API_URL to correct Render API endpoint
- Changed from safe-vault-qn1g.onrender.com to safee-y8iw.onrender.com
- This will fix frontend connection to API server
- Triggers new GitHub Pages deployment with correct API endpoint

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         working-directory: ./client
         run: npm run build
         env:
-          VITE_API_URL: https://safe-vault-qn1g.onrender.com
+          VITE_API_URL: https://safee-y8iw.onrender.com
           VITE_APP_NAME: Safee - Personal Vault
 
       - name: Setup Pages
