--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,9 @@ services:
     name: vault-api
     runtime: node
     plan: starter
+    buildCommand: cd server && npm run build:render
+    startCommand: cd server && npm run start:production
+    rootDir: .
     envVars:
       - key: NODE_ENV
         value: production
@@ -22,7 +25,7 @@ services:
       - key: SESSION_COOKIE_NAME
         value: pv_sess
       - key: ALLOWED_ORIGINS
-        value: https://AloneGhost12.github.io,https://your-client-domain.com,https://your-app.netlify.app,https://your-app.vercel.app
+        value: https://AloneGhost12.github.io,https://aloneghost12.netlify.app,https://your-app.vercel.app
       - key: TRUST_PROXY
         value: true
       - key: TRUSTED_PROXIES
