--- a/render.yaml
+++ b/render.yaml
@@ -29,7 +29,7 @@ services:
       - key: TRUST_PROXY
         value: true
       - key: TRUSTED_PROXIES
-        value: 127.0.0.1,::1
+        value: 127.0.0.1,::1,172.68.0.0/12,172.69.0.0/12,104.16.0.0/12
       # Cloudinary (optional)
       - key: CLOUDINARY_CLOUD_NAME
         sync: false
