Fix responsive design and implement SharedLayout component
- Created SharedLayout component for consistent responsive behavior
- Enhanced Sidebar with mobile-responsive hamburger menu
- Updated all pages (VaultPage, TrashPage, FilesPage, SettingsPage) to use SharedLayout
- Fixed mobile navigation and hamburger button positioning
- Improved responsive design across all screen sizes
- Recreated SettingsPage.tsx with complete functionality

--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,9 @@ services:
       - key: HOST
         value: 0.0.0.0
       - key: MONGO_URI
-        value: mongodb+srv://adharshnp92:OjMNYzmnZnR4sVnl@cluster0.vrx397v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+        sync: false
+      # Note: Set MONGO_URI manually in Render dashboard with value:
+      # mongodb+srv://adharshnp92:OjMNYzmnZnR4sVnl@cluster0.vrx397v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - key: JWT_ACCESS_SECRET
         generateValue: true
       - key: JWT_REFRESH_SECRET
