Fix domain deployment: configure base path for subdirectory deployment
- Update vite.config.ts to use VITE_BASE_PATH environment variable
- Add domain-specific build scripts for Windows and Unix
- Enable proper asset path generation for /safee/ subdirectory
- Resolves 404 errors for CSS/JS assets on tridex.app domain

--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:production": "npm ci && vite build",
+    "build:domain": "VITE_BASE_PATH=/safee/ vite build",
+    "build:domain:win": "set VITE_BASE_PATH=/safee/ && vite build",
     "preview": "vite preview",
     "start": "npm run preview",
     "docker:build": "docker build -t vault-client .",
