Fix asset 404 errors: Update base path configuration for deployment
- Changed default base path from '/safee/' to '/' in vite.config.ts
- Added build:root and build:root:win scripts for root path deployments
- This resolves 404 errors for CSS/JS assets on tridex.app deployment

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "build:production": "npm ci && vite build",
     "build:domain": "VITE_BASE_PATH=/safee/ vite build",
     "build:domain:win": "set VITE_BASE_PATH=/safee/ && vite build",
+    "build:root": "VITE_BASE_PATH=/ vite build",
+    "build:root:win": "set VITE_BASE_PATH=/ && vite build",
     "preview": "vite preview",
     "start": "npm run preview",
     "docker:build": "docker build -t vault-client .",
