Add tridex.app to ALLOWED_ORIGINS for CORS support
- Updated render.yaml to include https://tridex.app in ALLOWED_ORIGINS
- This fixes CORS policy violations when accessing API from tridex.app domain
- Resolves 'Access-Control-Allow-Origin' header missing error

--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: SESSION_COOKIE_NAME
         value: pv_sess
       - key: ALLOWED_ORIGINS
-        value: https://aloneghost12.github.io,https://aloneghost12.netlify.app
+        value: https://aloneghost12.github.io,https://aloneghost12.netlify.app,https://tridex.app
       - key: TRUST_PROXY
         value: true
       - key: TRUSTED_PROXIES
