Fix GitHub Pages SPA routing and refresh issues
- Add 404.html with SPA redirect script for GitHub Pages
- Update index.html with route handling for redirected URLs
- Add build:github scripts for GitHub Pages deployment
- Configure pathSegmentsToKeep=1 for project sites (username.github.io/repo-name)
- Fix favicon paths to use /safee/ base path
- Resolves 'File not found' errors when refreshing pages on GitHub Pages

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "build:domain:win": "set VITE_BASE_PATH=/safee/ && vite build",
     "build:root": "VITE_BASE_PATH=/ vite build",
     "build:root:win": "set VITE_BASE_PATH=/ && vite build",
+    "build:github": "VITE_BASE_PATH=/safee/ vite build",
+    "build:github:win": "set VITE_BASE_PATH=/safee/ && vite build",
     "preview": "vite preview",
     "start": "npm run preview",
     "docker:build": "docker build -t vault-client .",
