--- a/client/vercel.json
+++ b/client/vercel.json
@@ -23,8 +23,9 @@
     }
   ],
   "env": {
-    "VITE_API_URL": "https://safe-vault-qn1g.onrender.com",
-    "VITE_APP_NAME": "Personal Vault"
+    "VITE_API_URL": "https://safee-y8iw.onrender.com",
+    "VITE_APP_NAME": "Personal Vault",
+    "VITE_BASE_PATH": "/safee/"
   },
   "headers": [
     {
