Fix URL routing issue for tridex.app deployment
 COMPLETE SOLUTION - Resolves continuous refresh loop on https://tridex.app/safee/

 Root Cause: React Router wasn't configured with proper basename for subdirectory deployment

 Key Fixes:
- Added React Router basename support with dynamic base path configuration
- Enhanced Vite config to expose VITE_BASE_PATH to runtime
- Updated URL redirect handling in index.html with base path support
- Fixed Vercel routing configuration for /safee/ subdirectory
- Added VITE_BASE_PATH=/safee/ to production environment
- Enhanced 404.html redirect logic with proper base path handling

 New Features:
- Deployment scripts for tridex.app (PowerShell & Bash)
- NPM scripts: build:tridex, build:tridex:bash
- Comprehensive testing tools for URL routing validation
- Complete documentation with deployment instructions

 Expected Results:
-  No refresh loop on tridex.app/safee/
-  Proper redirect from tridex.app to tridex.app/safee/vault
-  All internal navigation works correctly
-  Direct URL access to any route works
-  Maintains all existing security and functionality

 Ready for production deployment to tridex.app!

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "build:production": "npm ci && vite build",
     "build:domain": "VITE_BASE_PATH=/safee/ vite build",
     "build:domain:win": "set VITE_BASE_PATH=/safee/ && vite build",
+    "build:tridex": "powershell -ExecutionPolicy Bypass -File build-for-tridex.ps1",
+    "build:tridex:bash": "bash build-for-tridex.sh",
     "build:root": "VITE_BASE_PATH=/ vite build",
     "build:root:win": "set VITE_BASE_PATH=/ && vite build",
     "build:github": "VITE_BASE_PATH=/safee/ vite build",
