--- a/client/vercel.json
+++ b/client/vercel.json
@@ -18,6 +18,16 @@
       }
     },
     {
+      "src": "/safee/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/safee/(.*)",
+      "dest": "/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
