--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "build:production": "npm ci && vite build",
     "build:domain": "VITE_BASE_PATH=/safee/ vite build",
     "build:domain:win": "set VITE_BASE_PATH=/safee/ && vite build",
-    "build:tridex": "powershell -ExecutionPolicy Bypass -File build-for-tridex.ps1",
+    "build:tridex": "powershell -ExecutionPolicy Bypass -File build-for-tridex-fixed.ps1",
     "build:tridex:bash": "bash build-for-tridex.sh",
+    "build:github-pages": "powershell -ExecutionPolicy Bypass -File build-for-github-pages.ps1",
+    "build:github-pages:bash": "bash build-for-github-pages.sh",
     "build:root": "VITE_BASE_PATH=/ vite build",
     "build:root:win": "set VITE_BASE_PATH=/ && vite build",
     "build:github": "VITE_BASE_PATH=/safee/ vite build",
