CLEANUP: Remove all tridex.app/safee/ references and configuration
- Reset VITE_BASE_PATH to root (/) in all configuration files
- Updated all build scripts to use root path instead of /safee/
- Removed confusing tridex-specific documentation files
- Removed debug files with tridex references
- Project now configured for clean root deployment
- No more subdirectory complications or routing issues

--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,16 @@
     "dev": "vite",
     "build": "vite build",
     "build:production": "npm ci && vite build",
-    "build:domain": "VITE_BASE_PATH=/safee/ vite build",
-    "build:domain:win": "set VITE_BASE_PATH=/safee/ && vite build",
+    "build:domain": "VITE_BASE_PATH=/ vite build",
+    "build:domain:win": "set VITE_BASE_PATH=/ && vite build",
     "build:tridex": "powershell -ExecutionPolicy Bypass -File build-for-tridex-fixed.ps1",
     "build:tridex:bash": "bash build-for-tridex.sh",
     "build:github-pages": "powershell -ExecutionPolicy Bypass -File build-for-github-pages.ps1",
     "build:github-pages:bash": "bash build-for-github-pages.sh",
     "build:root": "VITE_BASE_PATH=/ vite build",
     "build:root:win": "set VITE_BASE_PATH=/ && vite build",
-    "build:github": "VITE_BASE_PATH=/safee/ vite build",
-    "build:github:win": "set VITE_BASE_PATH=/safee/ && vite build",
+    "build:github": "VITE_BASE_PATH=/ vite build",
+    "build:github:win": "set VITE_BASE_PATH=/ && vite build",
     "preview": "vite preview",
     "start": "npm run preview",
     "docker:build": "docker build -t vault-client .",
