--- a/client/vercel.json
+++ b/client/vercel.json
@@ -18,16 +18,6 @@
       }
     },
     {
-      "src": "/safee/assets/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/safee/(.*)",
-      "dest": "/index.html"
-    },
-    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
@@ -35,7 +25,7 @@
   "env": {
     "VITE_API_URL": "https://safee-y8iw.onrender.com",
     "VITE_APP_NAME": "Personal Vault",
-    "VITE_BASE_PATH": "/safee/"
+    "VITE_BASE_PATH": "/"
   },
   "headers": [
     {
