SECURITY: Ultra-secure admin panel with IP whitelist - Mobile: 100.99.48.91, Local: 192.168.43.156, Gateway: 192.168.43.1 - Hidden admin paths with crypto tokens - Honeypot traps and enterprise security

--- a/server/.env.example
+++ b/server/.env.example
@@ -30,3 +30,16 @@ VITE_API_BASE_URL=http://localhost:5173
 # Virus Scanning Configuration (optional)
 CLAMAV_HOST=localhost
 CLAMAV_PORT=3310
+
+# 🔒 ULTRA-SECURE ADMIN PANEL CONFIGURATION
+# Multiple IP addresses for admin access (comma-separated)
+ADMIN_ALLOWED_IPS=100.99.48.91,192.168.43.156,192.168.43.1
+
+# Admin security settings
+ADMIN_MAX_ATTEMPTS=3
+ADMIN_LOCKOUT_MINUTES=15
+ADMIN_SESSION_TIMEOUT=5
+
+# Admin access logging
+ADMIN_LOG_LEVEL=verbose
+ADMIN_ALERT_EMAIL=your-security-email@domain.com
