--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "mongodb": "^6.19.0"
+    "mongodb": "^6.19.0",
+    "node-fetch": "^2.7.0"
   }
 }
