--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.19.13",
+    "@types/nodemailer": "^7.0.1",
     "@types/ws": "^8.18.1",
     "argon2": "^0.30.0",
     "cloudinary": "^2.7.0",
@@ -50,6 +51,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "otplib": "^12.0.1",
     "pino": "^8.0.0",
     "pino-http": "^10.5.0",
