Add AI Debug System to Production Environment
 Production Deployment:
- Added GEMINI_API_KEY to render.yaml for production
- AI Debug routes now available in production at /api/ai-debug/*
- Complete AI assistant functionality deployed to tridex.app

 AI Features Now Live:
- Real-time AI chat assistant
- System health monitoring
- Automated issue detection and fixes
- Intelligent troubleshooting

 Environment Configuration:
- Gemini API integration configured for production
- All AI debug endpoints properly routed
- Production-ready error handling and logging

The AI Debug Assistant is now fully deployed and accessible
on the production site at https://tridex.app/

--- a/render.yaml
+++ b/render.yaml
@@ -36,6 +36,9 @@ services:
         value: 279872768346294
       - key: CLOUDINARY_API_SECRET
         value: R2ioEHtBBs-6Kwmj-pbCL5Er3CQ
+      # Google Gemini AI configuration
+      - key: GEMINI_API_KEY
+        value: AIzaSyAZB4-tLhnTF6SArSM6i5WyWsQ95Hi1Bws
       # S3/R2 (optional)
       - key: S3_ENDPOINT
         sync: false
