Fix Production Email Service Connection Issues
 Email Service Optimization:
- Reduced connection timeouts for cloud environments (30s vs 60s)
- Optimized TLS configuration for better compatibility
- Added proper STARTTLS settings for port 587
- Disabled debug logging in production for performance

 Production Environment:
- Added all required SMTP environment variables to render.yaml
- Configured Brevo SMTP settings for production deployment
- Optimized connection settings for Render.com hosting
- Fixed connection timeout issues causing email failures

 Technical Improvements:
- Single connection mode for reliability
- Opportunistic TLS for better compatibility
- Proper cipher configuration
- Optimized greeting and socket timeouts

This should resolve the SMTP connection timeout errors
in production and enable proper email functionality.

--- a/render.yaml
+++ b/render.yaml
@@ -39,6 +39,17 @@ services:
       # Google Gemini AI configuration
       - key: GEMINI_API_KEY
         value: AIzaSyAZB4-tLhnTF6SArSM6i5WyWsQ95Hi1Bws
+      # Email SMTP configuration (Brevo)
+      - key: SMTP_HOST
+        value: smtp-relay.brevo.com
+      - key: SMTP_PORT
+        value: 587
+      - key: SMTP_USER
+        value: 93c1d4002@smtp-brevo.com
+      - key: SMTP_PASS
+        value: byQ4dHOJkNEaMGYh
+      - key: SMTP_SECURE
+        value: false
       # S3/R2 (optional)
       - key: S3_ENDPOINT
         sync: false
