--- a/render.yaml
+++ b/render.yaml
@@ -43,13 +43,15 @@ services:
       - key: SMTP_HOST
         value: smtp-relay.brevo.com
       - key: SMTP_PORT
-        value: 587
+        value: 2525
       - key: SMTP_USER
         value: 93c1d4002@smtp-brevo.com
       - key: SMTP_PASS
         value: byQ4dHOJkNEaMGYh
       - key: SMTP_SECURE
         value: false
+      - key: EMAIL_PLAIN_SUBJECTS
+        value: true
       # S3/R2 (optional)
       - key: S3_ENDPOINT
         sync: false
